fixed js and added css to make the ingredients card look pretty

--- a/recipies.html
+++ b/recipies.html
@@ -297,9 +297,11 @@
                         </div>
                     </div>
                 </div>
+
+                <button id="updateRecipies" onclick="updateReicipies()">Update Recipies</button>
             </div>
             <div class="recipies">
-                <div class="recipie" id="buttermilkchickentenders">
+                <div id="buttermilkchickentenders">
                     <h2>Buttermilk Chicken Tenders</h2>
                     <p>Ingredients:</p>
                     <ul>
