added some more recipies

--- a/recipies.html
+++ b/recipies.html
@@ -317,12 +317,153 @@
 
                     <p>Instructions:</p>
                     <ol>
-                        <li>Place chicken breasts in between 2 pieces of plastic wrap and pound to even thickness of about about ½″. Then cut into strips of about an inch thick. Place in a bowl with buttermilk and let sit in refrigerator, covered for about an hour.</li>
-                        <li>In a large bowl, combine flour, seasoned salt, paprika and parsley flakes. In another bowl, beat two eggs.</li>
-                        <li>In a deep frying pan, heat oil to about 350°(F) (medium heat for about 5 minutes).</li>
-                        <li>Remove chicken strips from buttermilk. One at a time dredge the strips in flour mix and shake off excess. Then dunk into beaten eggs and let excess drip off; then back through the flour. Set aside on a paper plate until complete.</li>
-                        <li>Carefully place the coated chicken tenders into the pan with hot oil. Fry for about 3-4 minutes, then flip pieces over for another 3 minutes or until golden brown. Internal temp should be 165 degrees F on an instant-read thermometer.</li>
-                        <li>Carefully remove chicken from oil and drain on paper towels.</li>
+                        <li>Place chicken breasts between plastic wrap and pound them to about ½" thick. Cut into 1" strips.</li>
+                        <li>Marinate the chicken strips in buttermilk for 1 hour in the refrigerator.</li>
+                        <li>Mix flour, seasoned salt, paprika, and parsley flakes in one bowl. Beat two eggs in another bowl. Heat oil in a pan to 350°F (medium heat for about 5 minutes).</li>
+                        <li>Remove chicken from buttermilk. Dredge each strip in the flour mix, shake off excess, dip in the egg, let excess drip off, and dredge in flour again. Set aside on a plate.</li>
+                        <li>Carefully place coated chicken in hot oil. Fry for 3-4 minutes per side, or until golden brown and cooked through (internal temperature of 165°F).</li>
+                        <li>Remove chicken from oil and drain on paper towels.</li>
+                        <li>Enjoy!</li>
+                    </ol>
+                </div>
+                <div id="sweetandspicychicken">
+                    <h2>Sweet and Spicy Chicken</h2>
+                    <p>Ingredients:</p>
+                    <ul>
+                        <li>1 lbs of fully cooked crispy chicken strips</li>
+                        <li>½ cup of light brown sugar</li>
+                        <li>4 tbsp of honey BBQ sauce</li>
+                        <li>3 tsp of hot sauce</li>
+                        <li>¼ cup of water</li>
+                    </ul>
+
+                    <p>Instructions:</p>
+                    <ol>
+                        <li>Bake the chicken following the instructions on the packaging.</li>
+                        <li>In a saucepan, combine water, brown sugar, BBQ sauce, and hot sauce. Heat over low to medium heat, stirring until the sauce is well mixed.</li>
+                        <li>Once the chicken is baked, pour the sauce over it, making sure it's evenly coated.</li>
+                        <li>Enjoy!</li>
+                    </ol>
+                </div>
+                <div id="southernfriedchicken">
+                    <h2>Southern Fried Chicken</h2>
+                    <p>Ingredients:</p>
+                    <ul>
+                        <li>1 whole chicken, cut up (or 8 pieces of your favorite cuts of chicken)</li>
+                        <li>4 teaspoons kosher salt</li>
+                        <li>2 teaspoons garlic powder</li>
+                        <li>2 teaspoons onion powder</li>
+                        <li>2 cups buttermilk</li>
+                        <li>2 Tablespoons hot sauce</li>
+                        <li>2 cup all-purpose flour</li>
+                        <li>1 cup cornstarch</li>
+                        <li>2 teaspoons paprika</li>
+                        <li>2 teaspoons black pepper</li>
+                        <li>peanut oil (for frying)</li>
+                        <li>flaked salt (for serving, optional)</li>
+                    </ul>
+
+                    <p>Instructions:</p>
+                    <ol>
+                        <li>Combine cut-up chicken, salt, garlic powder, onion powder, buttermilk, and hot sauce in a bowl. Cover and refrigerate for at least 2 hours (overnight is best).</li>
+                        <li>In a bowl, combine flour, cornstarch, salt, paprika, and pepper.</li>
+                        <li>Fill a deep fryer with peanut oil (or another neutral oil) and heat to 350°F.</li>
+                        <li>Let excess buttermilk drip off each chicken piece, then coat it thoroughly in the flour mixture. Shake off any excess. Let the coating become slightly pasty before frying.</li>
+                        <li>Carefully add 3-4 pieces of chicken to the hot oil, making sure not to overcrowd the fryer. Fry until golden brown, turning every few minutes.</li>
+                        <li>Use a meat thermometer to ensure the chicken reaches an internal temperature of 165°F. Dark meat may take 12-14 minutes, while white meat takes 8-10 minutes.</li>
+                        <li>Remove the fried chicken and place it on a paper towel-lined tray. Sprinkle with flaked salt. Repeat steps 4-7 for the remaining chicken pieces.</li>
+                        <li>Enjoy!</li>
+                    </ol>
+                </div>
+                <div id="honeybuffalowings">
+                    <h2>Honey Buffalo Wings</h2>
+                    <p>Ingredients:</p>
+                    <ul>
+                        <li>2 tbsp brown sugar</li>
+                        <li>1½ tsp kosher salt</li>
+                        <li>1 tsp black pepper</li>
+                        <li>1 ½ tsp garlic powder</li>
+                        <li>1½ tsp onion powder or dried minced onion</li>
+                        <li>1 tsp smoked paprika</li>
+                        <li>1 tsp chili powder</li>
+                        <li>1 tsp ground cumin</li>
+                        <li>1 tsp dried parsley</li>
+                        <li>¼ cup hot sauce</li>
+                        <li>½ cup honey</li>
+                        <li>1 tbsp melted butter</li>
+                        <li>1 tbsp molasses (optional but recommended)</li>
+                        <li>4 lbs fresh chicken wings, patted dry</li>
+                    </ul>
+
+                    <p>Instructions:</p>
+                    <ol>
+                        <li>Combine the rub ingredients in a small bowl and stir well.</li>
+                        <li>Spray your slow cooker with non-stick spray. Add the chicken wings and sprinkle the rub over them. Use your hands to massage the rub into the wings.</li>
+                        <li>In the empty rub bowl, whisk together the sauce ingredients. Pour the sauce over the wings and toss gently to coat.</li>
+                        <li>Cover the slow cooker and cook on HIGH for 2 hours, or on LOW for 3-4 hours.</li>
+                        <li>Enjoy!</li>
+                    </ol>
+                </div>
+                <div id="buffalochickentenders">
+                    <h2>Buffalo Chicken Tenders</h2>
+                    <p>Ingredients:</p>
+                    <ul>
+                        <li>4 chicken breasts, boneless, skinless</li>
+                        <li>1 cup buttermilk</li>
+                        <li>1 teaspoon hot sauce</li>
+                        <li>2 large eggs beaten</li>
+                        <li>2 cups flour</li>
+                        <li>2 1/2 teaspoons salt</li>
+                        <li>3/4 teaspoon pepper</li>
+                        <li>1/8 teaspoon paprika</li>
+                        <li>1/8 teaspoon garlic powder</li>
+                        <li>1/8 teaspoon baking powder</li>
+                        <li>canola oil for frying</li>
+                        <li>2/3 cup Franks Red Hot pepper sauce</li>
+                        <li>1 stick unsalted butter</li>
+                        <li>1 tablespoons white vinegar</li>
+                        <li>1/4 teaspoon Worcestershire sauce</li>
+                    </ul>
+
+                    <p>Instructions:</p>
+                    <ol>
+                        <li>Cut the chicken breasts into four tenders each. Soak them in buttermilk and hot sauce for 30 minutes.</li>
+                        <li>In one bowl, whisk eggs. In another bowl, combine flour and spices.</li>
+                        <li>Dip each chicken tender in the buttermilk, then in the flour mixture, then in the eggs, and finally back into the flour mixture. Shake off excess flour and place on a baking sheet. Repeat for all tenders.</li>
+                        <li>Heat oil to 350°F in a Dutch oven (oil should be 3 inches deep).</li>
+                        <li>Fry the chicken tenders in small batches for 5-7 minutes, or until golden brown.</li>
+                        <li>Combine the buffalo wing sauce ingredients in a saucepan and bring to a boil while whisking.</li>
+                        <li>Dip the fried chicken tenders in the buffalo wing sauce and serve immediately.</li>
+                        <li>Enjoy!</li>
+                    </ol>
+                </div>
+                <div id="friedscallops">
+                    <h2>Fried Scallops</h2>
+                    <p>Ingredients:</p>
+                    <ul>
+                        <li>4 cups vegetable oil</li>
+                        <li>1 lb scallops</li>
+                        <li>½ cup flour</li>
+                        <li>½ cup cornstarch</li>
+                        <li>1 teaspoon salt</li>
+                        <li>1 teaspoon garlic powder</li>
+                        <li>1 teaspoon paprika</li>
+                        <li>½ teaspoon pepper</li>
+                        <li>2 large eggs</li>
+                        <li>¼ cup water</li>
+                        <li>1½ cup breadcrumbs</li>
+                    </ul>
+
+                    <p>Instructions:</p>
+                    <ol>
+                        <li>Rinse scallops under cold water and pat dry. Remove any tough white muscle if present.</li>
+                        <li>In one bowl, mix together flour, cornstarch, salt, garlic powder, paprika, and pepper.</li>
+                        <li>In another bowl, whisk eggs and water.</li>
+                        <li>In a third bowl, add breadcrumbs.</li>
+                        <li>Dip each scallop in the flour mixture, then the egg mixture, and finally the breadcrumbs.</li>
+                        <li>Heat oil in a pan to 250-300°F. Fry the scallops in batches (6-10 at a time) until golden brown, about 1-2 minutes.</li>
+                        <li>Remove scallops from the oil and place on a paper-towel lined plate. Repeat with remaining scallops. Serve immediately with cocktail sauce, tartar sauce, and fresh lemons.</li>
+                        <li>Enjoy!</li>
                     </ol>
                 </div>
             </div>
