--- a/recipies.html
+++ b/recipies.html
@@ -445,7 +445,7 @@
                         <li>1 lb scallops</li>
                         <li>½ cup flour</li>
                         <li>½ cup cornstarch</li>
-                        <li>1 teaspoon salt</li>
+                        <li>1 teaspoon salt</li>ç]
                         <li>1 teaspoon garlic powder</li>
                         <li>1 teaspoon paprika</li>
                         <li>½ teaspoon pepper</li>
@@ -463,6 +463,117 @@
                         <li>Dip each scallop in the flour mixture, then the egg mixture, and finally the breadcrumbs.</li>
                         <li>Heat oil in a pan to 250-300°F. Fry the scallops in batches (6-10 at a time) until golden brown, about 1-2 minutes.</li>
                         <li>Remove scallops from the oil and place on a paper-towel lined plate. Repeat with remaining scallops. Serve immediately with cocktail sauce, tartar sauce, and fresh lemons.</li>
+                        <li>Enjoy!</li>
+                    </ol>
+                </div>
+                <div id="friedcalamari">
+                    <h2>Fried Calamari</h2>
+                    <p>Ingredients:</p>
+                    <ul>
+                        <li>1 lb cleaned calamari tubes cut into rings, and tentacles left whole</li>
+                        <li>juice of 1/2 a lemon</li>
+                        <li>2 cups flour</li>
+                        <li>1/2 tsp cayenne</li>
+                        <li>1/2 tsp paprika</li>
+                        <li>1 tsp salt</li>
+                        <li>1/2 cup buttermilk</li>
+                        <li>tallow for deep frying</li>
+                        <li>marinara sauce, lemon wedges, or aioli, for serving, optional</li>
+                    </ul>
+
+                    <p>Instructions:</p>
+                    <ol>
+                        <li>Soak the calamari in lemon juice for 15 minutes.</li>
+                        <li>Mix flour, cayenne, paprika, and salt in a bowl. Divide this mixture into two bowls.</li>
+                        <li>Place buttermilk or milk in a separate bowl.</li>
+                        <li>Heat tallow or your preferred oil to 375°F in a deep fryer or large cast iron pot.</li>
+                        <li>Remove the calamari from the lemon juice. Dredge each piece in flour, then buttermilk, and then flour again.</li>
+                        <li>Fry the calamari in batches for 2-3 minutes, until golden brown. Drain on paper towels and immediately salt generously.</li>
+                        <li>Enjoy with marinara sauce and lemon wedges.</li>
+                    </ol>
+                </div>
+                <div id="crispyshrimptempura">
+                    <h2>Cirspy Shrimp Tempura</h2>
+                    <p>Ingredients:</p>
+                    <ul>
+                        <li>1/2 lb large shrimp, peeled and deveined</li>
+                        <li>2 quarts vegetable oil for deep frying</li>
+                        <li>2 1/4 cup all purpose flour</li>
+                        <li>1/3 cup ice water</li>
+                        <li>1/4 cup cornstarch</li>
+                        <li>1 large egg</li>
+                        <li>1/4 tsp salt</li>
+                        <li>1/4 tsp white sugar</li>
+                        <li>1/2 tsp baking powder</li>
+                        <li>5 ice cubes</li>
+                    </ul>
+
+                    <p>Instructions:</p>
+                    <ol>
+                        <li>Heat oil in a deep fryer to 375°F.</li>
+                        <li>Mix flour, ice water, cornstarch, egg, salt, sugar, and baking powder in a bowl. Add ice cubes to the batter to keep it fresh and prevent it from becoming sticky.</li>
+                        <li>Place flour in a separate bowl. Coat each shrimp with flour. Dip the floured shrimp into the batter.</li>
+                        <li>Carefully place a few shrimp in the hot oil. Fry for 1 minute or until golden brown on all sides.</li>
+                        <li>Remove the tempura shrimp from the oil and drain on paper towels.</li>
+                        <li>Enjoy!</li>
+                    </ol>
+                </div>
+                <div id="crispygarlicparmesansalmon">
+                    <h2>Crispy Garlic Parmesan Salmon</h2>
+                    <p>Ingredients:</p>
+                    <ul>
+                        <li>2 pounds side wild salmon fillet</li>
+                        <li>⅔ cup plain breadcrumbs</li>
+                        <li>⅔ cup parmesan cheese grated</li>
+                        <li>¼ cup fresh parsley finely chopped</li>
+                        <li>4 cloves garlic minced</li>
+                        <li>⅓ cup butter melted</li>
+                        <li>1 pinch salt</li>
+                        <li>1 pinch pepper</li>
+                        <li>2 lemon wedges to serve</li>
+                    </ul>
+
+                    <p>Instructions:</p>
+                    <ol>
+                        <li>Preheat your oven to 400°F (200°C). Line a baking sheet with foil.</li>
+                        <li>Combine breadcrumbs, parmesan cheese, parsley and garlic in a bowl.</li>
+                        <li>Add melted butter and season with salt and pepper. Mix well until the breadcrumbs absorb the butter.</li>
+                        <li>Place the salmon fillet, skin side down, on the baking sheet. Spread the topping evenly over the salmon, pressing it in to coat completely. Lightly spray the salmon with cooking oil spray.</li>
+                        <li>Bake uncovered for 12-15 minutes (depending on the thickness of the salmon), until the topping is golden brown and the salmon flakes easily with a fork.</li>
+                        <li>Serve the salmon with lemon wedges and enjoy with a salad, steamed vegetables, rice, or mashed potatoes.</li>
+                    </ol>
+                </div>
+                <div id="bangbangshrimp">
+                    <h2>Bang-Bang Shrimp</h2>
+                    <p>Ingredients:</p>
+                    <ul>
+                        <li>½ cup vegetable oil, or more, as needed</li>
+                        <li>1 cup buttermilk</li>
+                        <li>¾ cup all-purpose flour</li>
+                        <li>½ cup cornstarch</li>
+                        <li>1 large egg</li>
+                        <li>1 tablespoon hot sauce</li>
+                        <li>Kosher salt and freshly ground black pepper, to taste</li>
+                        <li>1 cup breadcrumbs</li>
+                        <li>½ teaspoon onion powder</li>
+                        <li>½ teaspoon garlic powder</li>
+                        <li>½ teaspoon dried basil</li>
+                        <li>½ teaspoon dried oregano</li>
+                        <li>1 pound medium shrimp, peeled and deveined</li>
+                        <li>¼ cup mayonnaise</li>
+                        <li>2 tablespoons sweet chili sauce</li>
+                        <li>1 tablespoon honey</li>
+                        <li>1 teaspoon rice vinegar</li>
+                    </ul>
+
+                    <p>Instructions:</p>
+                    <ol>
+                        <li>Combine mayonnaise, sweet chili sauce, honey, and rice vinegar in a bowl. Set aside.</li>
+                        <li>In a bowl, whisk together buttermilk, flour, cornstarch, egg, hot sauce, salt, and pepper. Set aside.</li>
+                        <li>In a separate bowl, combine breadcrumbs, onion powder, garlic powder, basil, oregano, salt, and pepper. Set aside.</li>
+                        <li>Dip each shrimp into the buttermilk mixture, then dredge in the breadcrumb mixture, pressing to coat.</li>
+                        <li>Heat oil in a skillet over medium-high heat. Fry the shrimp in batches until golden brown and crispy (about 2-3 minutes). Drain on paper towels.</li>
+                        <li>Drizzle the shrimp with the sweet chili sauce and serve immediately.</li>
                         <li>Enjoy!</li>
                     </ol>
                 </div>
