--- a/recipies.html
+++ b/recipies.html
@@ -1,5 +1,9 @@
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" href="style.css">
         <title>CooKing: Recipies</title>
     </head>
@@ -350,15 +354,15 @@
                     <p>Ingredients:</p>
                     <ul>
                         <li>1 whole chicken, cut up (or 8 pieces of your favorite cuts of chicken)</li>
-                        <li>4 teaspoons kosher salt</li>
-                        <li>2 teaspoons garlic powder</li>
-                        <li>2 teaspoons onion powder</li>
+                        <li>4 tsp kosher salt</li>
+                        <li>2 tsp garlic powder</li>
+                        <li>2 tsp onion powder</li>
                         <li>2 cups buttermilk</li>
-                        <li>2 Tablespoons hot sauce</li>
+                        <li>2 tbsp hot sauce</li>
                         <li>2 cup all-purpose flour</li>
                         <li>1 cup cornstarch</li>
-                        <li>2 teaspoons paprika</li>
-                        <li>2 teaspoons black pepper</li>
+                        <li>2 tsp paprika</li>
+                        <li>2 tsp black pepper</li>
                         <li>peanut oil (for frying)</li>
                         <li>flaked salt (for serving, optional)</li>
                     </ul>
@@ -410,19 +414,19 @@
                     <ul>
                         <li>4 chicken breasts, boneless, skinless</li>
                         <li>1 cup buttermilk</li>
-                        <li>1 teaspoon hot sauce</li>
+                        <li>1 tsp hot sauce</li>
                         <li>2 large eggs beaten</li>
                         <li>2 cups flour</li>
-                        <li>2 1/2 teaspoons salt</li>
-                        <li>3/4 teaspoon pepper</li>
-                        <li>1/8 teaspoon paprika</li>
-                        <li>1/8 teaspoon garlic powder</li>
-                        <li>1/8 teaspoon baking powder</li>
+                        <li>2 ½ tsp salt</li>
+                        <li>¾ tsp pepper</li>
+                        <li>⅛ tsp paprika</li>
+                        <li>⅛ tsp garlic powder</li>
+                        <li>⅛ tsp baking powder</li>
                         <li>canola oil for frying</li>
-                        <li>2/3 cup Franks Red Hot pepper sauce</li>
+                        <li>⅔ cup Franks Red Hot pepper sauce</li>
                         <li>1 stick unsalted butter</li>
-                        <li>1 tablespoons white vinegar</li>
-                        <li>1/4 teaspoon Worcestershire sauce</li>
+                        <li>1 tbsp white vinegar</li>
+                        <li>¼ tsp Worcestershire sauce</li>
                     </ul>
 
                     <p>Instructions:</p>
@@ -437,6 +441,7 @@
                         <li>Enjoy!</li>
                     </ol>
                 </div>
+
                 <div id="friedscallops">
                     <h2>Fried Scallops</h2>
                     <p>Ingredients:</p>
@@ -445,10 +450,10 @@
                         <li>1 lb scallops</li>
                         <li>½ cup flour</li>
                         <li>½ cup cornstarch</li>
-                        <li>1 teaspoon salt</li>ç]
-                        <li>1 teaspoon garlic powder</li>
-                        <li>1 teaspoon paprika</li>
-                        <li>½ teaspoon pepper</li>
+                        <li>1 tsp salt</li>ç]
+                        <li>1 tsp garlic powder</li>
+                        <li>1 tsp paprika</li>
+                        <li>½ tsp pepper</li>
                         <li>2 large eggs</li>
                         <li>¼ cup water</li>
                         <li>1½ cup breadcrumbs</li>
@@ -471,12 +476,12 @@
                     <p>Ingredients:</p>
                     <ul>
                         <li>1 lb cleaned calamari tubes cut into rings, and tentacles left whole</li>
-                        <li>juice of 1/2 a lemon</li>
+                        <li>juice of ½ a lemon</li>
                         <li>2 cups flour</li>
-                        <li>1/2 tsp cayenne</li>
-                        <li>1/2 tsp paprika</li>
+                        <li>½ tsp cayenne</li>
+                        <li>½ tsp paprika</li>
                         <li>1 tsp salt</li>
-                        <li>1/2 cup buttermilk</li>
+                        <li>½ cup buttermilk</li>
                         <li>tallow for deep frying</li>
                         <li>marinara sauce, lemon wedges, or aioli, for serving, optional</li>
                     </ul>
@@ -493,18 +498,18 @@
                     </ol>
                 </div>
                 <div id="crispyshrimptempura">
-                    <h2>Cirspy Shrimp Tempura</h2>
+                    <h2>Crispy Shrimp Tempura</h2>
                     <p>Ingredients:</p>
                     <ul>
-                        <li>1/2 lb large shrimp, peeled and deveined</li>
+                        <li>½ lb large shrimp, peeled and deveined</li>
                         <li>2 quarts vegetable oil for deep frying</li>
-                        <li>2 1/4 cup all purpose flour</li>
-                        <li>1/3 cup ice water</li>
-                        <li>1/4 cup cornstarch</li>
+                        <li>2 ¼ cup all purpose flour</li>
+                        <li>⅓ cup ice water</li>
+                        <li>¼ cup cornstarch</li>
                         <li>1 large egg</li>
-                        <li>1/4 tsp salt</li>
-                        <li>1/4 tsp white sugar</li>
-                        <li>1/2 tsp baking powder</li>
+                        <li>¼ tsp salt</li>
+                        <li>¼ tsp white sugar</li>
+                        <li>½ tsp baking powder</li>
                         <li>5 ice cubes</li>
                     </ul>
 
@@ -522,7 +527,7 @@
                     <h2>Crispy Garlic Parmesan Salmon</h2>
                     <p>Ingredients:</p>
                     <ul>
-                        <li>2 pounds side wild salmon fillet</li>
+                        <li>2 lbs side wild salmon fillet</li>
                         <li>⅔ cup plain breadcrumbs</li>
                         <li>⅔ cup parmesan cheese grated</li>
                         <li>¼ cup fresh parsley finely chopped</li>
@@ -544,7 +549,7 @@
                     </ol>
                 </div>
                 <div id="bangbangshrimp">
-                    <h2>Bang-Bang Shrimp</h2>
+                    <h2>Bang Bang Shrimp</h2>
                     <p>Ingredients:</p>
                     <ul>
                         <li>½ cup vegetable oil, or more, as needed</li>
@@ -552,18 +557,18 @@
                         <li>¾ cup all-purpose flour</li>
                         <li>½ cup cornstarch</li>
                         <li>1 large egg</li>
-                        <li>1 tablespoon hot sauce</li>
-                        <li>Kosher salt and freshly ground black pepper, to taste</li>
                         <li>1 cup breadcrumbs</li>
-                        <li>½ teaspoon onion powder</li>
-                        <li>½ teaspoon garlic powder</li>
-                        <li>½ teaspoon dried basil</li>
-                        <li>½ teaspoon dried oregano</li>
+                        <li>½ tsp onion powder</li>
+                        <li>½ tsp garlic powder</li>
+                        <li>½ tsp dried basil</li>
+                        <li>½ tsp dried oregano</li>
                         <li>1 pound medium shrimp, peeled and deveined</li>
                         <li>¼ cup mayonnaise</li>
-                        <li>2 tablespoons sweet chili sauce</li>
-                        <li>1 tablespoon honey</li>
-                        <li>1 teaspoon rice vinegar</li>
+                        <li>2 tbsp sweet chili sauce</li>
+                        <li>1 tbsp honey</li>
+                        <li>1 tsp rice vinegar</li>
+                        <li>1 tbsp hot sauce</li>
+                        <li>kosher salt and freshly ground black pepper, to taste</li>
                     </ul>
 
                     <p>Instructions:</p>
@@ -574,6 +579,31 @@
                         <li>Dip each shrimp into the buttermilk mixture, then dredge in the breadcrumb mixture, pressing to coat.</li>
                         <li>Heat oil in a skillet over medium-high heat. Fry the shrimp in batches until golden brown and crispy (about 2-3 minutes). Drain on paper towels.</li>
                         <li>Drizzle the shrimp with the sweet chili sauce and serve immediately.</li>
+                        <li>Enjoy!</li>
+                    </ol>
+                </div>
+
+                <div id="friedonionrings">
+                    <h2>Fried Onion Rings</h2>
+                    <p>Ingredients:</p>
+                    <ul>
+                        <li>3 onions, sliced into rings</li>
+                        <li>1 quart buttermilk</li>
+                        <li>3 cups flour</li>
+                        <li>1 tbsp baking powder</li>
+                        <li>1 tbsp salt</li>
+                        <li>1 tbs pepper</li>
+                        <li>2 tsp mexican oregano</li>
+                        <li>Oil for frying, at least 1 inch deep in pan</li>
+                    </ul>
+
+                    <p>Instructions:</p>
+                    <ol>
+                        <li>Place the onion rings in a bowl of buttermilk and let them soak for at least an hour.</li>
+                        <li>In a separate bowl, combine flour, baking powder, oregano, salt, and pepper.</li>
+                        <li>Remove the onion rings from the buttermilk, one at a time, and coat them thoroughly in the flour mixture.</li>
+                        <li> Heat oil to 375°F. Fry the coated onion rings in batches until golden brown and crispy (about 2-3 minutes).</li>
+                        <li>Remove the onion rings from the oil and place them on a paper towel-lined plate to drain.</li>
                         <li>Enjoy!</li>
                     </ol>
                 </div>
