--- a/recipies.html
+++ b/recipies.html
@@ -592,7 +592,7 @@
                         <li>3 cups flour</li>
                         <li>1 tbsp baking powder</li>
                         <li>1 tbsp salt</li>
-                        <li>1 tbs pepper</li>
+                        <li>1 tbsp pepper</li>
                         <li>2 tsp mexican oregano</li>
                         <li>Oil for frying, at least 1 inch deep in pan</li>
                     </ul>
