added even more recipies

--- a/recipies.html
+++ b/recipies.html
@@ -607,6 +607,109 @@
                         <li>Enjoy!</li>
                     </ol>
                 </div>
+                <div id="eggsalad">
+                    <h2>Egg Salad</h2>
+                    <p>Ingredients:</p>
+                    <ul>
+                        <li>6 whole eggs in shell, brought to room temperature</li>
+                        <li>4 quarts of water</li>
+                        <li>1 tablespoon white vinegar</li>
+                        <li>4-6 tbsp good quality mayonnaise</li>
+                        <li>Pinch of table salt</li>
+                        <li>Pinch of white pepper</li>
+                    </ul>
+
+                    <p>Instructions:</p>
+                    <ul>
+                        <li>Fill a pot with water and bring it to a boil. Add a splash of vinegar. Gently lower the eggs into the boiling water, one at a time.</li>
+                        <li>Bring the water back to a boil and cook for 5 minutes. Turn off the heat and let the eggs sit in the hot water for 13 minutes.</li>
+                        <li>Drain the water and shake the pot gently to crack the shells. Peel the eggs under cool running water.</li>
+                        <li>Chop the peeled eggs into a bowl. Add mayonnaise, salt, and pepper to taste. Stir and adjust seasonings as needed.</li>
+                        <li>Cover the bowl and refrigerate until the egg salad is chilled. Serve on lettuce with your favorite bread.</li>
+                        <li>Enjoy!</li>
+                    </ul>
+                </div>
+                <div id="parmesancauliflowerbites">
+                    <h2>Parmesan Cauliflower Bites</h2>
+                    <p>Ingredients:</p>
+                    <ul>
+                        <li>3 cups cauliflower florets washed and thoroughly dried; about 1 small head of cauliflower</li>
+                        <li>2 tbsp butter melted</li>
+                        <li>½ cup parmesan cheese finely grated</li>
+                        <li>1 tsp paprika</li>
+                        <li>¼ tsp black pepper</li>
+                    </ul>
+
+                    <p>Instructions:</p>
+                    <ol>
+                        <li>Set your oven to 425°F.</li>
+                        <li>Toss cauliflower florets with melted butter in a bowl. Make sure all the florets are coated.</li>
+                        <li>Combine parmesan cheese, paprika, and pepper. Sprinkle the mixture over the buttered cauliflower.</li>
+                        <li>Arrange the cauliflower in a single layer on a baking sheet. Bake for 20 minutes, or until the edges start to crisp.</li>
+                        <li>Serve the cauliflower hot from the oven.</li>
+                        <li>Enjoy!</li>
+                    </ol>
+                </div>
+                <div id="onionpetals">
+                    <h2>Onion Petals</h2>
+                    <p>Ingredients:</p>
+                    <ul>
+                        <li>½ cup mayonnaise</li>
+                        <li>1/4 cup sour cream</li>
+                        <li>2 tbsp ketchup</li>
+                        <li>2 tbsp prepared horseradish</li>
+                        <li>1 clove garlic minced</li>
+                        <li>½ tsp kosher salt</li>
+                        <li>1/4 tsp black pepper</li>
+                        <li>1/4 tsp smoked paprika</li>
+                        <li>pinch cayenne pepper</li>
+                        <li>1 large sweet onion</li>
+                        <li>2 cups all-purpose flour</li>
+                        <li>2 tsps seasoned salt</li>
+                        <li>½ tsp black pepper</li>
+                        <li>½ tsp garlic powder</li>
+                        <li>½ tsp cayenne</li>
+                        <li>½ tsp onion powder</li>
+                        <li>½ tsp smoked paprika</li>
+                        <li>1 cup buttermilk</li>
+                        <li>1 large egg</li>
+                        <li>oil for frying</li>
+                    </ul>
+
+                    <p>Instructions</p>
+                    <ol>
+                        <li>Combine mayonnaise, sour cream, ketchup, horseradish, garlic, salt, pepper, paprika, and cayenne in a bowl. Whisk until smooth and refrigerate until serving.</li>
+                        <li>Cut the onion in half, then into quarters. Cut the quarters in half again. Set aside.</li>
+                        <li>In a large bowl, combine flour, seasoned salt, black pepper, garlic powder, cayenne, onion powder, and smoked paprika.</li>
+                        <li>In a separate bowl, whisk together buttermilk and egg.</li>
+                        <li>Place onion petals in a bag with ¼ cup of the dry flour mixture. Shake to coat.Dip coated petals in the buttermilk mixture. Place petals back in the dry flour mixture and coat well.</li>
+                        <li>Heat oil in a deep fryer or skillet to 350°F. Fry the coated onion petals for 3-4 minutes until golden brown.</li>
+                        <li>Drain the fried petals on paper towels and place on a wire rack to prevent sogginess. Serve with the sauce.</li>
+                        <li>Enjoy!</li>
+                    </ol>
+                </div>
+                <div id="crispybakedpotatowedges">
+                    <h2>Crispy Baked Potato Wedges</h2>
+                    <p>Ingredients:</p>
+                    <ul>
+                        <li>2 pounds Russet potatoes (6 smallish or 4 medium), scrubbed clean</li>
+                        <li>3 tablespoons olive oil</li>
+                        <li>2 teaspoons garlic powder</li>
+                        <li>2 teaspoons onion powder</li>
+                        <li>1 teaspoon fine sea salt</li>
+                        <li>Freshly ground black pepper</li>
+                        <li>2 tablespoons finely chopped fresh parsley, optional</li>
+                    </ul>
+
+                    <p>Instructions:</p>
+                    <ol>
+                        <li>Preheat oven to 400°F. Cut potatoes into wedges (8 wedges per potato).</li>
+                        <li>Place potato wedges in a bowl and cover with hot water. Let soak for 10 minutes.</li>
+                        <li>Drain potatoes and pat dry. Place on a baking sheet lined with parchment paper. Drizzle with olive oil and sprinkle with garlic powder, onion powder, salt, and pepper. Toss to coat.</li>
+                        <li>Bake for 30 minutes. Flip the wedges and bake for another 25-30 minutes, or until golden brown and crispy.</li>
+                        <li>Sprinkle with parsley (optional) and enjoy hot!</li>
+                    </ol>
+                </div>
             </div>
         </div>
 
